src/objects/EPC_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>Viewed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_of_Activity__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Date of Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EPC_Page_Number__c</fullName>
        <formula>CASE(
EPC_Section__c , 
 &quot;Commercial Terms&quot;, 1, 
&quot;Payment Information&quot;,2,
&quot;Legal Terms&quot;,3
,NULL)</formula>
        <label>EPC Page Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EPC_Section__c</fullName>
        <label>EPC Section</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Form of Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Terms</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GSO_Contract__c</fullName>
        <label>GSO Contract</label>
        <referenceTo>GSOContract__c</referenceTo>
        <relationshipName>ORT_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>EPC Activity</label>
    <nameField>
        <displayFormat>EA-{0000000}</displayFormat>
        <label>EPC Activity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EPC Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>